--- a/contato.html
+++ b/contato.html
@@ -300,7 +300,7 @@
             <div class="row">
                 <div class="col-lg-6 mt-5">
                   
-                        <img src="img/fisiologic.png" style=" max-height: 150px; ">
+                     <!--    <img src="img/fisiologic.png" style=" max-height: 150px; ">-->
                         <h3 class="p-3">Network Business Tower</h3>
                     <ul class="list-inline">
                                 <li class="h6 py-1" style="padding: 20.7px !important;"><i class="far fa-circle text-primary clock1"></i>24 horas</li>
@@ -314,7 +314,7 @@
                     </div>
                 </div>
                  <div class="col-lg-6 mt-5">
-                     <img src="img/hana.png" style="max-height: 150px; ">
+                    <!--  <img src="img/hana.png" style="max-height: 150px; "> -->
                         <h3 class="p-3">Biológica Espaço Saúde</h3>
                      <ul class="list-inline">
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 10:00 - 20:00</li>
