--- a/tree.html
+++ b/tree.html
@@ -195,7 +195,7 @@ https://github.com/ardacarofficial/links-website is open source project.
                     </div>
                 </div>
                  <div class="col-lg-6 mt-5">
-                      <img src="img/bs.png" style="max-height: 150px; ">
+                      <img src="img/bs.jpg" style="max-height: 150px; ">
                         <h3 class="pt-3">Biológica Espaço Saúde</h3>
                       <ul class="list-inline">
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 10:00 - 20:00</li>
