--- a/contato.html
+++ b/contato.html
@@ -185,7 +185,7 @@
         <p>Telefone: <a href="tel:11974237159" target="_blank">11 974237159</a></p>
         <p>Email: <a href="mailto:contato@drwill.com.br" target="_blank"> contato@drwill.com.br</a></p>
         <p>Instagram: <a href="https://www.instagram.com/drwillsouto/" target="_blank"> @drwillsouto</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/willsouto/" target="_blank"> @willsouto</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/willsouto/" target="_blank"> @drwillsouto</a></p>
         </div>
         <div class="header_svg_item">
           <a href="files/Contato%20Will%20Souto.vcf" rel="nofollow" target="_top">
