--- a/contato.html
+++ b/contato.html
@@ -266,7 +266,7 @@
             <div class="row">
                 <div class="col-lg-6 mt-5">
                   
-                        <img src="img/fisiologic.png" style=" max-height: 150px; ">
+                        <img src="img/nwb.jpg" style=" max-height: 150px; ">
                         <h3 class="pt-3">Network Business Tower</h3>
                         <p>Alameda Terracota, 185 - Cerâmica, São Caetano do Sul - SP, 09531-190</p>
                         <a class="btn btn-primary d-lg-block d-none mb-3" href="https://www.google.com/maps/dir//Dr.+Will+-+Massoterapia,+Fisioterapia,+treinamento+funcional+e+Pilates+-+Alameda+Terracota,+185+-+Cer%C3%A2mica,+S%C3%A3o+Caetano+do+Sul+-+SP,+09531-190/@-23.6240469,-46.5806499,15z/data=!4m9!4m8!1m0!1m5!1m1!1s0x94ce437c76c3b40d:0x6f359f097e5d7f66!2m2!1d-46.5806499!2d-23.6240469!3e0?entry=ttu"><img src="img/rota.png"/> Rotas</a>
@@ -277,7 +277,7 @@
                     </div>
                 </div>
                  <div class="col-lg-6 mt-5">
-                     <img src="img/hana.png" style="max-height: 150px; ">
+                     <img src="img/bs.jpg" style="max-height: 150px; ">
                         <h3 class="pt-3">Biológica Espaço Saúde</h3>
                         <p>R. das Esmeraldas, 606 - Jardim, Santo André - SP, 09090-770</p>
                         <a class="btn btn-primary d-lg-block d-none mb-3" href="https://www.google.com/maps/dir//biol%C3%B3gica+espa%C3%A7o+de+sa%C3%BAde+santo+andr%C3%A9+endere%C3%A7o/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x94ce4380be1d3fb5:0x1546ee4ff0259d16?sa=X&ved=1t:3061&ictx=111"><img src="img/rota.png"/> Rotas</a>
