--- a/contato.html
+++ b/contato.html
@@ -274,7 +274,8 @@
                       <img src="img/nwb.jpg" style=" max-height: 150px; ">
                         <h3 class="p-3">Network Business Tower</h3>
                     <ul class="list-inline">
-                                <li class="h6 py-1" style="padding: 20.7px !important;"><i class="far fa-circle text-primary clock1"></i>24 horas</li>
+                        <li class="h6 py-1" style=""><b>Horários de atendimento</b></li>
+                                <li class="h6 py-1" style="padding: 0 20.7px 20.7px 20.7px !important;"><i class="far fa-circle text-primary clock1"></i>24 horas</li>
                             </ul>
                         <p>Alameda Terracota, 185 - Cerâmica, São Caetano do Sul - SP, 09531-190</p>
                         <a class="btn btn-primary d-lg-block d-none mb-3" href="https://www.google.com/maps/dir//Dr.+Will+-+Massoterapia,+Fisioterapia,+treinamento+funcional+e+Pilates+-+Alameda+Terracota,+185+-+Cer%C3%A2mica,+S%C3%A3o+Caetano+do+Sul+-+SP,+09531-190/@-23.6240469,-46.5806499,15z/data=!4m9!4m8!1m0!1m5!1m1!1s0x94ce437c76c3b40d:0x6f359f097e5d7f66!2m2!1d-46.5806499!2d-23.6240469!3e0?entry=ttu"><img src="img/rota.png"/> Rotas</a>
@@ -287,7 +288,7 @@
                  <div class="col-lg-6 mt-5">
                      <img src="img/bs.jpg" style="max-height: 150px; "> -->
                         <h3 class="p-3">Biológica Espaço Saúde</h3>
-                     <ul class="list-inline">
+                     <ul class="list-inline"> <li class="h6 py-1" style=""><b>Horários de atendimento</b></li>
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 10:00 - 20:00</li>
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Sabado: 09:00 - 13:00</li>
                             </ul>
