--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
 
     <!-- Service Start -->
-    <div class="container-fluid px-0 py-5 my-5">
+  <!--  <div class="container-fluid px-0 py-5 my-5">
         <div class="row mx-0 justify-content-center text-center">
             <div class="col-lg-6">
                 <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Equipamentos das Unidades</h6>
@@ -470,7 +470,7 @@
             
             
         </div>
-    </div>
+    </div>-->
         <!-- <div class="row justify-content-center bg-appointment mx-0">
             <div class="col-lg-6 py-5">
                 <div class="p-5 my-5" style="background: rgba(33, 30, 28, 0.7);">
