--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                         <img class="img-fluid" src="img/wq1.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <p class="m-0" style="font-size: 0.98em;">Terapeuta manual, integrativo, instrutor de pilates &<br>graduando em fisioterapia</p>
+                                <p class="m-0" style="font-size: 0.98em;">Fisioterapeuta, massoterapeuta e <br>instrutor de pilates</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
