--- a/sobre.html
+++ b/sobre.html
@@ -156,7 +156,8 @@
                 </div>
                 <div class="col-lg-6">
                     <span class="pl-4 border-left border-primary d-block"><p>Graduado em Fisioterapia pelo Centro Universitário FMABC.<br>
-Pós-graduando em Especilização em dor pelo Fisio em Ortopedia.<br>
+Pós-graduando em Especialização em dor pelo Fisio em Ortopedia.<br>
+Pós-graduando em Ortopedia e Trauma pelo Fisio em Ortopedia.<br>
 Pós-graduando em Acupuntura pela EBRAMEC.
 <br><br>
 É fisioterapeuta no Instituto Fisiologic e massoterapeuta atendendo em diversas localidades, atuou como estagiário de massoterapia na Escola Bergqvist e de fisioterapia no Centro de Reabilitação e Equoterapia Coração Valente(ARCV), Hospital Estadual Mario Covas(HEMC), Santa Casa de Santo André(CHMSA) e na UPA Perimetral.<br>
