--- a/sobre.html
+++ b/sobre.html
@@ -630,7 +630,7 @@ Graduação em Análise e Desenvolvimento de Sistemas. <br class="clear">- Facul
                         <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
                     <p>Tratamento personalizado com seriedade e dedicação.<br>Experimente nossos serviços e descubra os benefícios para a sua saúde e bem-estar.<p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>São Caetano do Sul, SP</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                     <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
                     <div class="d-flex justify-content-start mt-4">
