--- a/sobre.html
+++ b/sobre.html
@@ -56,7 +56,7 @@
                     <a class="text-primary px-2" href="https://twitter.com/drwillsouto" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a> 
-                    <a class="text-primary px-2" href="https://www.linkedin.com/in/willsouto/" target="_blank">
+                    <a class="text-primary px-2" href="https://www.linkedin.com/in/drwillsouto/" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     
@@ -193,7 +193,7 @@ Formação completa descrita no <a href="https://lattes.cnpq.br/2388059456660725
         <p>Telefone: <a href="tel:11974237159" target="_blank">11 974237159</a></p>
         <p>Email: <a href="mailto:contato@drwill.com.br" target="_blank"> contato@drwill.com.br</a></p>
         <p>Instagram: <a href="https://www.instagram.com/drwillsouto/" target="_blank"> @drwillsouto</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/willsouto/" target="_blank"> @drwillsouto</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/drwillsouto/" target="_blank"> @drwillsouto</a></p>
         </div>
         <div class="header_svg_item">
           <a href="files/Contato%20Will%20Souto.vcf" rel="nofollow" target="_top">
@@ -637,7 +637,7 @@ Graduação em Análise e Desenvolvimento de Sistemas. <br class="clear">- Facul
                          <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://twitter.com/drwillsouto" target="_blank"><i class="fab fa-twitter"></i></a>
                        <!-- <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/willsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/drwillsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                        
                     </div>
                 </div>
