--- a/shell.html
+++ b/shell.html
@@ -55,7 +55,7 @@
                     <a class="text-primary px-2" href="https://twitter.com/drwillsouto" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a> 
-                    <a class="text-primary px-2" href="https://www.linkedin.com/in/willsouto/" target="_blank">
+                    <a class="text-primary px-2" href="https://www.linkedin.com/in/drwillsouto/" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                    
@@ -159,14 +159,14 @@
                         <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
                     <p>Tratamento personalizado com seriedade e dedicação.<br>Experimente nossos serviços e descubra os benefícios para a sua saúde e bem-estar.<p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>São Caetano do Sul, SP</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                     <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
                     <div class="d-flex justify-content-start mt-4">
                          <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://twitter.com/drwillsouto" target="_blank"><i class="fab fa-twitter"></i></a>
                        <!-- <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/willsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/drwillsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                        
                     </div>
                 </div>
