--- a/contato.html
+++ b/contato.html
@@ -56,7 +56,7 @@
                     <a class="text-primary px-2" href="https://twitter.com/drwillsouto" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a> 
-                    <a class="text-primary px-2" href="https://www.linkedin.com/in/willsouto/" target="_blank">
+                    <a class="text-primary px-2" href="https://www.linkedin.com/in/drwillsouto/" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     
@@ -185,7 +185,7 @@
         <p>Telefone: <a href="tel:11974237159" target="_blank">11 974237159</a></p>
         <p>Email: <a href="mailto:contato@drwill.com.br" target="_blank"> contato@drwill.com.br</a></p>
         <p>Instagram: <a href="https://www.instagram.com/drwillsouto/" target="_blank"> @drwillsouto</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/willsouto/" target="_blank"> @drwillsouto</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/drwillsouto/" target="_blank"> @drwillsouto</a></p>
         </div>
         <div class="header_svg_item">
           <a href="files/Contato%20Will%20Souto.vcf" rel="nofollow" target="_top">
@@ -328,14 +328,14 @@
                         <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
                     <p>Tratamento personalizado com seriedade e dedicação.<br>Experimente nossos serviços e descubra os benefícios para a sua saúde e bem-estar.<p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>São Caetano do Sul, SP</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                     <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://twitter.com/drwillsouto" target="_blank"><i class="fab fa-twitter"></i></a>
                        <!-- <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/willsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/drwillsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         
                     </div>
                 </div>
